<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.vss.suportebasicodevida5.sbv_vos"
    android:background="#fffffe82">

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/emergencia"
        android:id="@+id/buttonEmergencia"
        android:onClick="onCLickChange2Activity"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/medicina_em_png_queroimagem_ceica_crispim_2_transparente"
        android:textSize="15dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:layout_alignParentBottom="true"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/respira"
            android:id="@+id/buttonRespira"
            android:layout_alignTop="@+id/buttonNaoRespira"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="onCLickChange2Activity"
            android:layout_gravity="left|bottom"
            android:layout_weight="1"
            android:textSize="16sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nao_respira"
            android:id="@+id/buttonNaoRespira"
            android:onClick="onCLickChange2Activity"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="right|bottom"
            android:layout_weight="1"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:id="@+id/buttonHome"
        android:onClick="onCLickChange2Activity"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:id="@+id/imageViewVSS"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/vigion_logo"
        android:layout_alignBottom="@+id/buttonEmergencia"
        android:layout_toLeftOf="@+id/buttonEmergencia"
        android:layout_toStartOf="@+id/buttonEmergencia" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/buttonEmergencia"
        android:layout_above="@+id/linearLayout">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="175dp"
            android:id="@+id/imageView2"
            android:background="@drawable/vos2_transparente"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/vos_sentidos"
            android:id="@+id/textView"
            android:textColor="#ff000000"
            android:layout_below="@+id/imageView2"
            android:layout_alignParentBottom="true" />


    </RelativeLayout>

</RelativeLayout>
