<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#fffffe82">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonEngasgamento"
        android:text="@string/engasgamento"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onCLickChange2Activity" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suporte_basico_de_vida"
        android:id="@+id/buttonSBV"
        android:onClick="onCLickChange2Activity"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/buttonEmergencia"
        android:layout_toEndOf="@id/buttonEngasgamento" />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/emergencia"
        android:id="@+id/buttonEmergencia"
        android:onClick="onCLickChange2Activity"
        android:textSize="15dp"
        android:background="@drawable/medicina_em_png_queroimagem_ceica_crispim_2_transparente"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:id="@+id/imageViewVSS"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/vigion_logo"
        android:layout_alignBottom="@+id/buttonEmergencia"
        android:layout_toLeftOf="@+id/buttonEmergencia"
        android:layout_toStartOf="@+id/buttonEmergencia" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/coracao_pagina_inicial_transparencia" />

</RelativeLayout>